name:                alban-knights
version:             0.2.1.5
synopsis:            An utility tool for AlbanKnights of MMO Mabinogi
description:         See README.md
homepage:            https://github.com/sandmark/AlbanKnights/
license:             BSD3
license-file:        LICENSE
author:              sandmark
maintainer:          sandmark.m@gmail.com
copyright:           2016 sandmark
category:            Util
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                       src/REPL
  exposed-modules:     AlbanKnights
                       Rating
                       REPL.REPL
                       REPL.Commands
                       REPL.Util
                       REPL.Exit
                       REPL.NPC
                       REPL.Lock
                       REPL.List
                       REPL.Set
                       REPL.Unset
                       REPL.Update
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable AlbanKnights
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_alban_knights
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alban-knights
  default-language:    Haskell2010

test-suite alban-knights-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alban-knights
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sandmark/AlbanKnights/
